# ilab-on-ocp

./: .pre-commit-config.yaml  .yamllint.yaml  Makefile  Pipfile  README.md  importer-pipeline.yaml  pipeline.py  pipeline.yaml  pyproject.toml  standalone.py  standalone.tpl
SDG/: Containerfile  deployment.yaml
eval/: Containerfile  kfp-model-server.yaml  mmlu_pipeline.py  mmlu_pipeline.yaml  mt_bench_pipeline.py  mt_bench_pipeline.yaml  requirements.txt  run.py
noobaa/: README.md
rhoai-ilab-image/: Containerfile  connection.py
scripts/: download_hf_model.py
sdg/: Containerfile  README.md  __init__.py  components.py  kfp-model-server.yaml  pipeline.py  pipeline.yaml
sdg/faked/fixtures/: messages_mistral-7b-instruct-v02_2024-09-09T15_30_29.jsonl  pyproject.toml  skills_recipe_2024-09-09T15_30_29.yaml  skills_train_msgs_2024-09-09T15_30_29.jsonl  test_mistral-7b-instruct-v02_2024-09-09T15_30_29.jsonl  train_mistral-7b-instruct-v02_2024-09-09T15_30_29.jsonl
sdg/faked/fixtures/node_datasets_2024-09-09T15_30_29/: compositional_skills_grounded_linguistics_inclusion.jsonl
signed-certificate/: README.md
standalone/: README.md  instructlab-rhoai.md  nfs-server-deployment.yaml  standalone.py  standalone.tpl
tests/: go.mod  go.sum
training/: Containerfile  __init__.py  component.yaml  components.py  deployment.yaml  ilab-distributed-pytorch-job.yaml  ilab-multi-node-multi-gpu-pytorch-job.yaml  ilab-pytorch-job.yaml  kfp_client_test.ipynb  pipeline.py  pipeline.yaml  run.py  run_data_processing.py  run_main_ds.py
utils/: __init__.py  components.py  consts.py  (+1 more)
(+51 files in other folders)
